--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,54 @@
+2022-05-20  Klaus Weide  <kweide@compute-240-14.cels.anl.gov>
+
+	* source/process_fetch_list.F90: edited Robodoc header.
+	(process_fetch_list): changed "pattern" argument to POINTER_INTENT_IN.
+	(process_fetch_list): added some debug output of questionable use,
+	#ifdef DEBUG_XTRA.
+	(process_fetch_list): added "call gr_pmPrintCommPattern" at the
+	end, #ifdef DEBUG.
+
+	* source/mpi_lib.F90 (mpi_xchange_blocks): tighten buffer overrun
+	tests in three places (if (amr_error_checking)).
+
+	* source/mpi_amr_local_surr_blks_lkup.F90: minor comment edits.
+
+	* source/amr_initialize.F90: removed trailing spaces.
+
+	* source/amr_1blk_guardcell_srl.F90: added
+	"presentRegions" optional argument to "amr_1blk_guardcell_srl" interface.
+	(amr_1blk_guardcell_srl): added loghic for skipping some guard
+	cell regions if they are not included in "presentRegions" flags.
+	(amr_1blk_guardcell_srl): some other minor additions borrowed from
+	"PmAsyncExp" code variant.
+
+	* source/amr_1blk_guardcell_reset.F90 (amr_1blk_guardcell_reset):
+	added "pcache_gcregions" variables.
+
+	* source/amr_1blk_cc_cp_remote.F90: 
+	(amr_1blk_cc_cp_remote): added DEBUG_LITE code; it should only
+	print if something goes wrong.
+
+	* headers/physicaldata.F90 (physicaldata): added
+	"pcache_gcregions" variables.
+
+	* headers/paramesh_interfaces.F90 (amr_1blk_guardcell_srl): added
+	"presentRegions" optional argument to "amr_1blk_guardcell_srl" interface.
+
+	* headers/gr_pmCommPatternData.F90 (gr_pmCommPatternData): added
+	space for alternative comm patterns for GC filling and restriction.
+	(gr_pmDeallocateCommPatterns): removed unused local variable;
+	initialize "id" component.
+	(gr_pmInitCommPatterns): added for debugging. Note that the
+	pattern has to be provided as a POINTER argument. Note hardwired MAXPRINT.
+
+	* headers/gr_pmCommDataTypes.F90 (gr_pmCommDataTypes): added "id"
+	component to gr_pmCommPattern_t.
+	(gr_pmCommDataTypes): added constants GRID_SUBPAT_GC_DEFAULT=1,
+	GRID_SUBPAT_GC_OPT=2, etc.
+
+	* flash_avoid_orrery/physicaldata.F90 (physicaldata): added
+	"pcache_gcregions" variables.
+
 2022-05-13  Klaus Weide  <kweide@uchicago.edu>
 
 	* utilities/multigrid/mpi_amr_store_comm_info_mg.F90: kept
