--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,23 @@
 2022-05-20  Klaus Weide  <kweide@compute-240-14.cels.anl.gov>
 
+	* source/amr_morton_process.F90: 
+	(amr_morton_process): added one variant pattern each for gc and restrict comms.
+
+	* source/mpi_morton_bnd_restrict.F90: 
+	(mpi_morton_bnd_restrict): compute a variant pattern if subPatNo
+	is given with value GRID_SUBPAT_RESTRICT_ANC. Use
+	gr_pmCommPatternPtr to get a pointer to the proper pattern slot.
+
+	* source/mpi_morton_bnd.F90: 
+	(mpi_morton_bnd): compute a variant pattern if subPatNo
+	is given with value GRID_SUBPAT_GC_OPT. Use
+	gr_pmCommPatternPtr to get a pointer to the proper pattern slot.
+
 	* headers/paramesh_mpi_interfaces.F90: 
 	(process_fetch_list): changed "pattern" argument to POINTER_INTENT_IN.
+	(mpi_morton_bnd): added optional arg subPatNo to interface.
+	(mpi_morton_bnd_restrict): added optional arg subPatNo to
+	interface.
 
 	* source/process_fetch_list.F90: edited Robodoc header.
 	(process_fetch_list): changed "pattern" argument to POINTER_INTENT_IN.
