--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,21 @@
 2022-05-25  Klaus Weide  <kweide@uchicago.edu>
 
-	* source/mpi_morton_bnd_restrict.F90: added internal function hasLeafFaceNeigh.
+	* source/mpi_morton_bnd_restrict.F90: added internal function
+	hasLeafFaceNeighs and isLeafFaceNeigh.
 	(mpi_morton_bnd_restrict): reference GRID_SUBPAT_RESTRICT_FOR_FCORR.
-	(mpi_morton_bnd_restrict): If GRID_SUBPAT_RESTRICT_FOR_FCORR
-	passed, skip requesting child blocks if the parent has no LEAF face-neighbors.
+	(mpi_morton_bnd_restrict): If GRID_SUBPAT_RESTRICT_FOR_FCORR is
+	passed, only request a child block if the parent has a LEAF
+	face-neighbor at a face direction and side for which flux
+	restriction from the child would be needed. If in such a situation
+	only one face of the child needs to contribute fine flux data for
+	flux correction, dtype may be set to 13,15,11,17,5, or 23 instead
+	of 14 so that only data from the appropriate child face will be communicated.
 
 	* source/mpi_amr_restrict_bnd_data.F90: added internal function hasLeafFaceNeigh.
 	(amr_restrict_bnd_data): skip bnd-restriction to parent blocks
 	that have no LEAF face-neighbors.
+	(amr_restrict_bnd_data): skip bnd-restriction from child blocks
+	for which no cached grid meta-information is availabe.
 
 	* source/mpi_amr_comm_setup.F90 (mpi_amr_comm_setup): reference GRID_SUBPAT_RESTRICT_FOR_FCORR.
 	(mpi_amr_comm_setup): use GRID_SUBPAT_RESTRICT_FOR_FCORR in
