Fixes to make previous merge work; needs more.
Current failure in Composite_SNIaDDT_AMR_2d_Paramesh variant w/ 8 procs:

      79 1.8527E-02 3.2835E-04  ( 2.800E+06,  3.000E+07,   0.00    ) |  3.284E-04 9.936E-04
  iteration, no. not moved =            0         234
  iteration, no. not moved =            1          66
  iteration, no. not moved =            2           0
 refined: total leaf blocks =          428
 refined: total blocks =          560
      80 1.8855E-02 3.2641E-04  ( 4.400E+06,  3.000E+07,   0.00    ) |  3.264E-04 1.019E-03
 *** Wrote checkpoint file to snd_hdf5_chk_0002 ****
 Error in surr_blks_lkup for parent : remote block            2           6
  not located on pe            5  while processing blk            7           5
 DRIVER_ABORT: gr_pmBlockGetter: surr_blks_lkup for parent failed
application called MPI_Abort(MPI_COMM_WORLD, 1) - process 5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,33 @@
+2022-06-13  Klaus Weide  <kweide@compute-240-14.cels.anl.gov>
+
+	* source/gr_mpiXchangeBlocks.F90 (gr_mpiXchangeBlocks): source
+	file from PmAsyncDev code development, originally created out of
+	mpi_lib.F90. use pattern dummy arg to access the active comm pattern.
+
+	* source/gr_pmBlockGetter.F90: source file from PmAsyncDev code
+	development. store pointer to gr_theActiveCommPattern and use it.
+
+	* source/gr_amr1blkRestrict.F90: In ancillary restrict, skip parent blocks w/o leaf neighs.
+
+	* source/gr_amrGuardcellHead.F90: pass
+	ntypeMin,ntypeMax,levelMin,levelMax to gr_mpiAmrComm.
+
+	* source/mpi_amr_1blk_guardcell.F90: turn of DEBUG_STATEMACHINE by default.
+
+	* source/mpi_amr_guardcell.F90: pass ntypeMin,ntypeMax,levelMin,levelMax args to gr_mpiAmrComm.
+
+	* source/process_fetch_list.F90 (process_fetch_list): removed some unncessary code that was for debugging.
+
+	* source/gr_mpiAmrComm.F90 (gr_mpiAmrComm): now has
+	ntypeMin,ntypeMax,levelMin,levelMax dummy args. special case logic
+	for more pattern variants. for now, avoid GRID_SUBPAT_RESTRICT_ANC
+	with getter.
+
+	* source/mpi_amr_1blk_restrict.F90 (mpi_amr_1blk_restrict): pass
+	ntypeMin,ntypeMax,levelMin,levelMax args to gr_mpiAmrComm.
+	Now pass the value of received "lfulltree" flag on to
+	gr_mpiAmrComm. In ancillary restrict, skip parent blocks w/o leaf neighs.
+
 2022-05-25  Klaus Weide  <kweide@uchicago.edu>
 
 	* source/mpi_morton_bnd_restrict.F90: added internal function
