--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,6 @@
 	* headers/paramesh_dimensions.F90: introduce 'include
 	"gr_pmPdgDimenInit.fh"' for initializing PARAMESH constants
 	hardwired for several physicaldata groups. This relies on support
-	of the Flash-X congiguration mechanism (setup.py) for generating
+	of the Flash-X configuration mechanism (setup.py) for generating
 	the file to included (and other files included by THAT file).
 
