log recent change

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2022-10-13  Klaus Weide  <kweide@uchicago.edu>
+
+	* gr_pmPdgDecl.F90: add 7 slots densVar...velzVar to derived type
+	pdgConst_t, for generalizing previously hardwired references to
+	DENS_VAR,...,VELZ_VAR occurring in various Grid unit source files
+	to the multi-PDG situation.
+
 2022-10-11  Klaus Weide  <kweide@uchicago.edu>
 
 	* bittree/mpi_amr_redist_blk.F90: use gr_pmPdgDecl module. Narrow
