add 8 more slots to type pdgConst_t

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-10-20  Klaus Weide  <kweide@uchicago.edu>
+
+	* headers/ gr_pmPdgDecl.F90: add 8 more slots to type pdgConst_t:
+	nspecies, speciesBegin, speciesEnd, tempVar, gamcVar, gameVar,
+	sumyMscalar, yeMscalar.
+
 2022-10-14  Klaus Weide  <kweide@uchicago.edu>
 
 	* source/amr_1blk_guardcell_srl.F90: added ig argument to
@@ -6,8 +12,8 @@
 	* headers/paramesh_interfaces.F90: added ig dummy argument to
 	amr_1blk_bcset interface.
 
-	* gr_pmPdgDecl.F90: correct type of 7 slots densVar...velzVar to
-	integer.
+	* headers/gr_pmPdgDecl.F90: correct type of 7 slots densVar...velzVar
+	to integer.
 
 2022-10-13  Klaus Weide  <kweide@uchicago.edu>
 
