--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-11-02  Klaus Weide  <kweide@uchicago.edu>
 
+	* source/amr_perm_to_1blk.F90,source/mpi_amr_comm_setup.F90,source/mpi_get_buffer.F90:
+	use PDG-specific constants and variables where needed, instead of
+	global ones from the paramesh_dimensions and physicaldata modules.
+
 	* headers/paramesh_interfaces.F90,source/amr_restrict_unk_fun.F90,source/mpi_amr_1blk_restrict.F90,source/mpi_amr_restrict_fulltree.F90:
 	add ig to amr_restrict_unk_fun interface.
 
