PDG-related changes in 'edge'-related routines
(committing previous work)

Use ASSOCIATE, more specific USE statements, some cleanup.

--- a/ChangeLog
+++ b/ChangeLog
@@ -80,6 +80,9 @@
 	* source/mpi_morton_bnd.F90,source/mpi_morton_bnd_fluxcon.F90,source/mpi_morton_bnd_prolong.F90:
 	tweaked for PDG, use DEFAULT PDG for the purpose of setting
 	'nguarda', make some USE statements more specific.
+	* source/mpi_get_edge_buffer.F90,source/mpi_put_edge_buffer.F90,mpi_put_edge_buffer_1blk.F90:
+	PDG-related changes (using ASSOCIATE), more specific USE
+	statements, some cleanup.
 
 2022-11-03  Klaus Weide  <kweide@uchicago.edu>
 
