--- a/ChangeLog
+++ b/ChangeLog
@@ -83,6 +83,8 @@
 	* source/mpi_get_edge_buffer.F90,source/mpi_put_edge_buffer.F90,mpi_put_edge_buffer_1blk.F90:
 	PDG-related changes (using ASSOCIATE), more specific USE
 	statements, some cleanup.
+	* source/mpi_get_buffer.F90,source/mpi_put_buffer.F90: PDG-related
+	and other adaptations and cleanup.
 
 2022-11-03  Klaus Weide  <kweide@uchicago.edu>
 
